jkind-common/src/jkind/lustre/parsing/LustreParser.java
// Generated from Lustre.g4 by ANTLR 4.4
package jkind.lustre.parsing;
import org.antlr.v4.runtime.atn.*;
import org.antlr.v4.runtime.dfa.DFA;
import org.antlr.v4.runtime.*;
import org.antlr.v4.runtime.misc.*;
import org.antlr.v4.runtime.tree.*;
import java.util.List;
import java.util.Iterator;
import java.util.ArrayList;

@SuppressWarnings({"all", "warnings", "unchecked", "unused", "cast"})
public class LustreParser extends Parser {
	static { RuntimeMetaData.checkVersion("4.4", RuntimeMetaData.VERSION); }

	protected static final DFA[] _decisionToDFA;
	protected static final PredictionContextCache _sharedContextCache =
		new PredictionContextCache();
	public static final int
		T__61=1, T__60=2, T__59=3, T__58=4, T__57=5, T__56=6, T__55=7, T__54=8, 
		T__53=9, T__52=10, T__51=11, T__50=12, T__49=13, T__48=14, T__47=15, T__46=16, 
		T__45=17, T__44=18, T__43=19, T__42=20, T__41=21, T__40=22, T__39=23, 
		T__38=24, T__37=25, T__36=26, T__35=27, T__34=28, T__33=29, T__32=30, 
		T__31=31, T__30=32, T__29=33, T__28=34, T__27=35, T__26=36, T__25=37, 
		T__24=38, T__23=39, T__22=40, T__21=41, T__20=42, T__19=43, T__18=44, 
		T__17=45, T__16=46, T__15=47, T__14=48, T__13=49, T__12=50, T__11=51, 
		T__10=52, T__9=53, T__8=54, T__7=55, T__6=56, T__5=57, T__4=58, T__3=59, 
		T__2=60, T__1=61, T__0=62, REAL=63, BOOL=64, INT=65, ID=66, WS=67, SL_COMMENT=68, 
		ML_COMMENT=69, ERROR=70;
	public static final String[] tokenNames = {
		"<INVALID>", "'recursive'", "'{'", "'='", "'--@contract'", "'int'", "'('", 
		"','", "'var'", "'const'", "'--@ensure'", "'mod'", "'>='", "'<'", "'pre'", 
		"'assert'", "']'", "'node'", "'type'", "'<>'", "'let'", "'returns'", "'tel'", 
		"'floor'", "'then'", "'+'", "'struct'", "'/'", "'of'", "'--%REALIZABLE'", 
		"';'", "'--%PROPERTY'", "'}'", "'if'", "'induct'", "':='", "'enum'", "'<='", 
		"'--%MAIN'", "'condact'", "'*'", "'exists'", "'--@require'", "'.'", "'->'", 
		"':'", "'--%IVC'", "'['", "'|'", "'>'", "'bool'", "'forall'", "'xor'", 
		"'or'", "'subrange'", "'=>'", "'div'", "'else'", "')'", "'and'", "'not'", 
		"'-'", "'real'", "REAL", "BOOL", "INT", "ID", "WS", "SL_COMMENT", "ML_COMMENT", 
		"ERROR"
	};
	public static final int
		RULE_program = 0, RULE_typedef = 1, RULE_constant = 2, RULE_node = 3, 
		RULE_recursive = 4, RULE_varDeclList = 5, RULE_varDeclGroup = 6, RULE_topLevelType = 7, 
		RULE_inductTerm = 8, RULE_type = 9, RULE_bound = 10, RULE_property = 11, 
		RULE_contract = 12, RULE_contract_id = 13, RULE_ensure = 14, RULE_require = 15, 
		RULE_realizabilityInputs = 16, RULE_ivc = 17, RULE_main = 18, RULE_assertion = 19, 
		RULE_equation = 20, RULE_lhs = 21, RULE_expr = 22, RULE_eID = 23;
	public static final String[] ruleNames = {
		"program", "typedef", "constant", "node", "recursive", "varDeclList", 
		"varDeclGroup", "topLevelType", "inductTerm", "type", "bound", "property", 
		"contract", "contract_id", "ensure", "require", "realizabilityInputs", 
		"ivc", "main", "assertion", "equation", "lhs", "expr", "eID"
	};

	@Override
	public String getGrammarFileName() { return "Lustre.g4"; }

	@Override
	public String[] getTokenNames() { return tokenNames; }

	@Override
	public String[] getRuleNames() { return ruleNames; }

	@Override
	public String getSerializedATN() { return _serializedATN; }

	@Override
	public ATN getATN() { return _ATN; }

	public LustreParser(TokenStream input) {
		super(input);
		_interp = new ParserATNSimulator(this,_ATN,_decisionToDFA,_sharedContextCache);
	}
	public static class ProgramContext extends ParserRuleContext {
		public TypedefContext typedef(int i) {
			return getRuleContext(TypedefContext.class,i);
		}
		public List<ConstantContext> constant() {
			return getRuleContexts(ConstantContext.class);
		}
		public TerminalNode EOF() { return getToken(LustreParser.EOF, 0); }
		public List<RecursiveContext> recursive() {
			return getRuleContexts(RecursiveContext.class);
		}
		public List<TypedefContext> typedef() {
			return getRuleContexts(TypedefContext.class);
		}
		public ConstantContext constant(int i) {
			return getRuleContext(ConstantContext.class,i);
		}
		public NodeContext node(int i) {
			return getRuleContext(NodeContext.class,i);
		}
		public RecursiveContext recursive(int i) {
			return getRuleContext(RecursiveContext.class,i);
		}
		public List<NodeContext> node() {
			return getRuleContexts(NodeContext.class);
		}
		public ProgramContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_program; }
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof LustreVisitor ) return ((LustreVisitor<? extends T>)visitor).visitProgram(this);
			else return visitor.visitChildren(this);
		}
	}

	public final ProgramContext program() throws RecognitionException {
		ProgramContext _localctx = new ProgramContext(_ctx, getState());
		enterRule(_localctx, 0, RULE_program);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(54);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while ((((_la) & ~0x3f) == 0 && ((1L << _la) & ((1L << T__61) | (1L << T__53) | (1L << T__45) | (1L << T__44))) != 0)) {
				{
				setState(52);
				switch (_input.LA(1)) {
				case T__44:
					{
					setState(48); typedef();
					}
					break;
				case T__53:
					{
					setState(49); constant();
					}
					break;
				case T__45:
					{
					setState(50); node();
					}
					break;
				case T__61:
					{
					setState(51); recursive();
					}
					break;
				default:
					throw new NoViableAltException(this);
				}
				}
				setState(56);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			setState(57); match(EOF);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class TypedefContext extends ParserRuleContext {
		public TerminalNode ID() { return getToken(LustreParser.ID, 0); }
		public TopLevelTypeContext topLevelType() {
			return getRuleContext(TopLevelTypeContext.class,0);
		}
		public TypedefContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_typedef; }
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof LustreVisitor ) return ((LustreVisitor<? extends T>)visitor).visitTypedef(this);
			else return visitor.visitChildren(this);
		}
	}

	public final TypedefContext typedef() throws RecognitionException {
		TypedefContext _localctx = new TypedefContext(_ctx, getState());
		enterRule(_localctx, 2, RULE_typedef);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(59); match(T__44);
			setState(60); match(ID);
			setState(61); match(T__59);
			setState(62); topLevelType();
			setState(63); match(T__32);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class ConstantContext extends ParserRuleContext {
		public TerminalNode ID() { return getToken(LustreParser.ID, 0); }
		public ExprContext expr() {
			return getRuleContext(ExprContext.class,0);
		}
		public TypeContext type() {
			return getRuleContext(TypeContext.class,0);
		}
		public ConstantContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_constant; }
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof LustreVisitor ) return ((LustreVisitor<? extends T>)visitor).visitConstant(this);
			else return visitor.visitChildren(this);
		}
	}

	public final ConstantContext constant() throws RecognitionException {
		ConstantContext _localctx = new ConstantContext(_ctx, getState());
		enterRule(_localctx, 4, RULE_constant);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(65); match(T__53);
			setState(66); match(ID);
			setState(69);
			_la = _input.LA(1);
			if (_la==T__17) {
				{
				setState(67); match(T__17);
				setState(68); type(0);
				}
			}

			setState(71); match(T__59);
			setState(72); expr(0);
			setState(73); match(T__32);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class NodeContext extends ParserRuleContext {
		public VarDeclListContext input;
		public VarDeclListContext output;
		public VarDeclListContext local;
		public AssertionContext assertion(int i) {
			return getRuleContext(AssertionContext.class,i);
		}
		public RealizabilityInputsContext realizabilityInputs(int i) {
			return getRuleContext(RealizabilityInputsContext.class,i);
		}
		public List<VarDeclListContext> varDeclList() {
			return getRuleContexts(VarDeclListContext.class);
		}
		public List<RealizabilityInputsContext> realizabilityInputs() {
			return getRuleContexts(RealizabilityInputsContext.class);
		}
		public TerminalNode ID() { return getToken(LustreParser.ID, 0); }
		public PropertyContext property(int i) {
			return getRuleContext(PropertyContext.class,i);
		}
		public List<EquationContext> equation() {
			return getRuleContexts(EquationContext.class);
		}
		public EquationContext equation(int i) {
			return getRuleContext(EquationContext.class,i);
		}
		public List<MainContext> main() {
			return getRuleContexts(MainContext.class);
		}
		public VarDeclListContext varDeclList(int i) {
			return getRuleContext(VarDeclListContext.class,i);
		}
		public IvcContext ivc(int i) {
			return getRuleContext(IvcContext.class,i);
		}
		public List<AssertionContext> assertion() {
			return getRuleContexts(AssertionContext.class);
		}
		public MainContext main(int i) {
			return getRuleContext(MainContext.class,i);
		}
		public List<PropertyContext> property() {
			return getRuleContexts(PropertyContext.class);
		}
		public List<IvcContext> ivc() {
			return getRuleContexts(IvcContext.class);
		}
		public NodeContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_node; }
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof LustreVisitor ) return ((LustreVisitor<? extends T>)visitor).visitNode(this);
			else return visitor.visitChildren(this);
		}
	}

	public final NodeContext node() throws RecognitionException {
		NodeContext _localctx = new NodeContext(_ctx, getState());
		enterRule(_localctx, 6, RULE_node);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(75); match(T__45);
			setState(76); match(ID);
			setState(77); match(T__56);
			setState(79);
			_la = _input.LA(1);
			if (_la==ID) {
				{
				setState(78); ((NodeContext)_localctx).input = varDeclList();
				}
			}

			setState(81); match(T__4);
			setState(82); match(T__41);
			setState(83); match(T__56);
			setState(85);
			_la = _input.LA(1);
			if (_la==ID) {
				{
				setState(84); ((NodeContext)_localctx).output = varDeclList();
				}
			}

			setState(87); match(T__4);
			setState(88); match(T__32);
			setState(93);
			_la = _input.LA(1);
			if (_la==T__54) {
				{
				setState(89); match(T__54);
				setState(90); ((NodeContext)_localctx).local = varDeclList();
				setState(91); match(T__32);
				}
			}

			setState(95); match(T__42);
			setState(104);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while (((((_la - 6)) & ~0x3f) == 0 && ((1L << (_la - 6)) & ((1L << (T__56 - 6)) | (1L << (T__47 - 6)) | (1L << (T__33 - 6)) | (1L << (T__31 - 6)) | (1L << (T__24 - 6)) | (1L << (T__16 - 6)) | (1L << (ID - 6)))) != 0)) {
				{
				setState(102);
				switch (_input.LA(1)) {
				case T__56:
				case ID:
					{
					setState(96); equation();
					}
					break;
				case T__31:
					{
					setState(97); property();
					}
					break;
				case T__47:
					{
					setState(98); assertion();
					}
					break;
				case T__24:
					{
					setState(99); main();
					}
					break;
				case T__33:
					{
					setState(100); realizabilityInputs();
					}
					break;
				case T__16:
					{
					setState(101); ivc();
					}
					break;
				default:
					throw new NoViableAltException(this);
				}
				}
				setState(106);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			setState(107); match(T__40);
			setState(109);
			_la = _input.LA(1);
			if (_la==T__32) {
				{
				setState(108); match(T__32);
				}
			}

			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class RecursiveContext extends ParserRuleContext {
		public VarDeclListContext input;
		public VarDeclListContext output;
		public VarDeclListContext local;
		public TerminalNode ID() { return getToken(LustreParser.ID, 0); }
		public List<EquationContext> equation() {
			return getRuleContexts(EquationContext.class);
		}
		public EquationContext equation(int i) {
			return getRuleContext(EquationContext.class,i);
		}
		public List<VarDeclListContext> varDeclList() {
			return getRuleContexts(VarDeclListContext.class);
		}
		public VarDeclListContext varDeclList(int i) {
			return getRuleContext(VarDeclListContext.class,i);
		}
		public RecursiveContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_recursive; }
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof LustreVisitor ) return ((LustreVisitor<? extends T>)visitor).visitRecursive(this);
			else return visitor.visitChildren(this);
		}
	}

	public final RecursiveContext recursive() throws RecognitionException {
		RecursiveContext _localctx = new RecursiveContext(_ctx, getState());
		enterRule(_localctx, 8, RULE_recursive);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(111); match(T__61);
			setState(112); match(ID);
			setState(113); match(T__56);
			setState(115);
			_la = _input.LA(1);
			if (_la==ID) {
				{
				setState(114); ((RecursiveContext)_localctx).input = varDeclList();
				}
			}

			setState(117); match(T__4);
			setState(118); match(T__41);
			setState(119); match(T__56);
			setState(121);
			_la = _input.LA(1);
			if (_la==ID) {
				{
				setState(120); ((RecursiveContext)_localctx).output = varDeclList();
				}
			}

			setState(123); match(T__4);
			setState(124); match(T__32);
			setState(129);
			_la = _input.LA(1);
			if (_la==T__54) {
				{
				setState(125); match(T__54);
				setState(126); ((RecursiveContext)_localctx).local = varDeclList();
				setState(127); match(T__32);
				}
			}

			setState(131); match(T__42);
			setState(133); 
			_errHandler.sync(this);
			_la = _input.LA(1);
			do {
				{
				{
				setState(132); equation();
				}
				}
				setState(135); 
				_errHandler.sync(this);
				_la = _input.LA(1);
			} while ( _la==T__56 || _la==ID );
			setState(137); match(T__40);
			setState(139);
			_la = _input.LA(1);
			if (_la==T__32) {
				{
				setState(138); match(T__32);
				}
			}

			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class VarDeclListContext extends ParserRuleContext {
		public VarDeclGroupContext varDeclGroup(int i) {
			return getRuleContext(VarDeclGroupContext.class,i);
		}
		public List<VarDeclGroupContext> varDeclGroup() {
			return getRuleContexts(VarDeclGroupContext.class);
		}
		public VarDeclListContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_varDeclList; }
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof LustreVisitor ) return ((LustreVisitor<? extends T>)visitor).visitVarDeclList(this);
			else return visitor.visitChildren(this);
		}
	}

	public final VarDeclListContext varDeclList() throws RecognitionException {
		VarDeclListContext _localctx = new VarDeclListContext(_ctx, getState());
		enterRule(_localctx, 10, RULE_varDeclList);
		try {
			int _alt;
			enterOuterAlt(_localctx, 1);
			{
			setState(141); varDeclGroup();
			setState(146);
			_errHandler.sync(this);
			_alt = getInterpreter().adaptivePredict(_input,14,_ctx);
			while ( _alt!=2 && _alt!=org.antlr.v4.runtime.atn.ATN.INVALID_ALT_NUMBER ) {
				if ( _alt==1 ) {
					{
					{
					setState(142); match(T__32);
					setState(143); varDeclGroup();
					}
					} 
				}
				setState(148);
				_errHandler.sync(this);
				_alt = getInterpreter().adaptivePredict(_input,14,_ctx);
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class VarDeclGroupContext extends ParserRuleContext {
		public List<EIDContext> eID() {
			return getRuleContexts(EIDContext.class);
		}
		public EIDContext eID(int i) {
			return getRuleContext(EIDContext.class,i);
		}
		public TypeContext type() {
			return getRuleContext(TypeContext.class,0);
		}
		public VarDeclGroupContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_varDeclGroup; }
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof LustreVisitor ) return ((LustreVisitor<? extends T>)visitor).visitVarDeclGroup(this);
			else return visitor.visitChildren(this);
		}
	}

	public final VarDeclGroupContext varDeclGroup() throws RecognitionException {
		VarDeclGroupContext _localctx = new VarDeclGroupContext(_ctx, getState());
		enterRule(_localctx, 12, RULE_varDeclGroup);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(149); eID(0);
			setState(154);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while (_la==T__55) {
				{
				{
				setState(150); match(T__55);
				setState(151); eID(0);
				}
				}
				setState(156);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			setState(157); match(T__17);
			setState(158); type(0);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class TopLevelTypeContext extends ParserRuleContext {
		public TopLevelTypeContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_topLevelType; }
	 
		public TopLevelTypeContext() { }
		public void copyFrom(TopLevelTypeContext ctx) {
			super.copyFrom(ctx);
		}
	}
	public static class InductTypeContext extends TopLevelTypeContext {
		public InductTermContext inductTerm(int i) {
			return getRuleContext(InductTermContext.class,i);
		}
		public List<InductTermContext> inductTerm() {
			return getRuleContexts(InductTermContext.class);
		}
		public InductTypeContext(TopLevelTypeContext ctx) { copyFrom(ctx); }
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof LustreVisitor ) return ((LustreVisitor<? extends T>)visitor).visitInductType(this);
			else return visitor.visitChildren(this);
		}
	}
	public static class RecordTypeContext extends TopLevelTypeContext {
		public List<TerminalNode> ID() { return getTokens(LustreParser.ID); }
		public TypeContext type(int i) {
			return getRuleContext(TypeContext.class,i);
		}
		public TerminalNode ID(int i) {
			return getToken(LustreParser.ID, i);
		}
		public List<TypeContext> type() {
			return getRuleContexts(TypeContext.class);
		}
		public RecordTypeContext(TopLevelTypeContext ctx) { copyFrom(ctx); }
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof LustreVisitor ) return ((LustreVisitor<? extends T>)visitor).visitRecordType(this);
			else return visitor.visitChildren(this);
		}
	}
	public static class EnumTypeContext extends TopLevelTypeContext {
		public List<TerminalNode> ID() { return getTokens(LustreParser.ID); }
		public TerminalNode ID(int i) {
			return getToken(LustreParser.ID, i);
		}
		public EnumTypeContext(TopLevelTypeContext ctx) { copyFrom(ctx); }
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof LustreVisitor ) return ((LustreVisitor<? extends T>)visitor).visitEnumType(this);
			else return visitor.visitChildren(this);
		}
	}
	public static class PlainTypeContext extends TopLevelTypeContext {
		public TypeContext type() {
			return getRuleContext(TypeContext.class,0);
		}
		public PlainTypeContext(TopLevelTypeContext ctx) { copyFrom(ctx); }
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof LustreVisitor ) return ((LustreVisitor<? extends T>)visitor).visitPlainType(this);
			else return visitor.visitChildren(this);
		}
	}

	public final TopLevelTypeContext topLevelType() throws RecognitionException {
		TopLevelTypeContext _localctx = new TopLevelTypeContext(_ctx, getState());
		enterRule(_localctx, 14, RULE_topLevelType);
		int _la;
		try {
			setState(201);
			switch (_input.LA(1)) {
			case T__57:
			case T__12:
			case T__8:
			case T__0:
			case ID:
				_localctx = new PlainTypeContext(_localctx);
				enterOuterAlt(_localctx, 1);
				{
				setState(160); type(0);
				}
				break;
			case T__36:
				_localctx = new RecordTypeContext(_localctx);
				enterOuterAlt(_localctx, 2);
				{
				setState(161); match(T__36);
				setState(162); match(T__60);
				{
				setState(163); match(ID);
				setState(164); match(T__17);
				setState(165); type(0);
				}
				setState(173);
				_errHandler.sync(this);
				_la = _input.LA(1);
				while (_la==T__32) {
					{
					{
					setState(167); match(T__32);
					setState(168); match(ID);
					setState(169); match(T__17);
					setState(170); type(0);
					}
					}
					setState(175);
					_errHandler.sync(this);
					_la = _input.LA(1);
				}
				setState(176); match(T__30);
				}
				break;
			case T__26:
				_localctx = new EnumTypeContext(_localctx);
				enterOuterAlt(_localctx, 3);
				{
				setState(178); match(T__26);
				setState(179); match(T__60);
				setState(180); match(ID);
				setState(185);
				_errHandler.sync(this);
				_la = _input.LA(1);
				while (_la==T__55) {
					{
					{
					setState(181); match(T__55);
					setState(182); match(ID);
					}
					}
					setState(187);
					_errHandler.sync(this);
					_la = _input.LA(1);
				}
				setState(188); match(T__30);
				}
				break;
			case T__28:
				_localctx = new InductTypeContext(_localctx);
				enterOuterAlt(_localctx, 4);
				{
				setState(189); match(T__28);
				setState(190); match(T__60);
				setState(191); inductTerm();
				setState(196);
				_errHandler.sync(this);
				_la = _input.LA(1);
				while (_la==T__14) {
					{
					{
					setState(192); match(T__14);
					setState(193); inductTerm();
					}
					}
					setState(198);
					_errHandler.sync(this);
					_la = _input.LA(1);
				}
				setState(199); match(T__30);
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class InductTermContext extends ParserRuleContext {
		public List<TerminalNode> ID() { return getTokens(LustreParser.ID); }
		public TypeContext type(int i) {
			return getRuleContext(TypeContext.class,i);
		}
		public TerminalNode ID(int i) {
			return getToken(LustreParser.ID, i);
		}
		public List<TypeContext> type() {
			return getRuleContexts(TypeContext.class);
		}
		public InductTermContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_inductTerm; }
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof LustreVisitor ) return ((LustreVisitor<? extends T>)visitor).visitInductTerm(this);
			else return visitor.visitChildren(this);
		}
	}

	public final InductTermContext inductTerm() throws RecognitionException {
		InductTermContext _localctx = new InductTermContext(_ctx, getState());
		enterRule(_localctx, 16, RULE_inductTerm);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(203); match(ID);
			setState(211);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while (_la==T__56) {
				{
				{
				setState(204); match(T__56);
				setState(205); match(ID);
				setState(206); type(0);
				setState(207); match(T__4);
				}
				}
				setState(213);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class TypeContext extends ParserRuleContext {
		public TypeContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_type; }
	 
		public TypeContext() { }
		public void copyFrom(TypeContext ctx) {
			super.copyFrom(ctx);
		}
	}
	public static class ArrayTypeContext extends TypeContext {
		public TypeContext type() {
			return getRuleContext(TypeContext.class,0);
		}
		public TerminalNode INT() { return getToken(LustreParser.INT, 0); }
		public ArrayTypeContext(TypeContext ctx) { copyFrom(ctx); }
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof LustreVisitor ) return ((LustreVisitor<? extends T>)visitor).visitArrayType(this);
			else return visitor.visitChildren(this);
		}
	}
	public static class RealTypeContext extends TypeContext {
		public RealTypeContext(TypeContext ctx) { copyFrom(ctx); }
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof LustreVisitor ) return ((LustreVisitor<? extends T>)visitor).visitRealType(this);
			else return visitor.visitChildren(this);
		}
	}
	public static class SubrangeTypeContext extends TypeContext {
		public BoundContext bound(int i) {
			return getRuleContext(BoundContext.class,i);
		}
		public List<BoundContext> bound() {
			return getRuleContexts(BoundContext.class);
		}
		public SubrangeTypeContext(TypeContext ctx) { copyFrom(ctx); }
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof LustreVisitor ) return ((LustreVisitor<? extends T>)visitor).visitSubrangeType(this);
			else return visitor.visitChildren(this);
		}
	}
	public static class IntTypeContext extends TypeContext {
		public IntTypeContext(TypeContext ctx) { copyFrom(ctx); }
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof LustreVisitor ) return ((LustreVisitor<? extends T>)visitor).visitIntType(this);
			else return visitor.visitChildren(this);
		}
	}
	public static class UserTypeContext extends TypeContext {
		public TerminalNode ID() { return getToken(LustreParser.ID, 0); }
		public UserTypeContext(TypeContext ctx) { copyFrom(ctx); }
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof LustreVisitor ) return ((LustreVisitor<? extends T>)visitor).visitUserType(this);
			else return visitor.visitChildren(this);
		}
	}
	public static class BoolTypeContext extends TypeContext {
		public BoolTypeContext(TypeContext ctx) { copyFrom(ctx); }
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof LustreVisitor ) return ((LustreVisitor<? extends T>)visitor).visitBoolType(this);
			else return visitor.visitChildren(this);
		}
	}

	public final TypeContext type() throws RecognitionException {
		return type(0);
	}
